# hero_ex1_sw

./: README.md
devel/: .catkin  _setup_util.py
devel/include/ex1_serial/: Message.h  Read.h  Send.h  Telemetry.h
devel/include/teleop/: Command.h
devel/lib/ex1_serial/: add_crc  cobs  detect_pkt  pkt_validation  serial_Tx_Rx  serial_send  uncobs
devel/lib/pkgconfig/: ex1_serial.pc  ex1_startup.pc  rt_usb_9axisimu_driver.pc  teleop.pc
devel/lib/rt_usb_9axisimu_driver/: rt_usb_9axisimu_driver
devel/lib/teleop/: ex1_teleop
devel/share/ex1_serial/cmake/: ex1_serial-msg-paths.cmake  ex1_serialConfig.cmake
devel/share/ex1_startup/cmake/: ex1_startupConfig.cmake
devel/share/roseus/ros/ex1_serial/: manifest.l
devel/share/roseus/ros/teleop/: manifest.l
devel/share/rt_usb_9axisimu_driver/cmake/: rt_usb_9axisimu_driverConfig.cmake
devel/share/teleop/cmake/: teleop-msg-extras.cmake  teleop-msg-paths.cmake  teleopConfig.cmake
src/ex1_serial/: CMakeLists.txt
src/ex1_serial/config/: internal_comms.xml
src/ex1_serial/launch/: ex1_serial.launch  telemetry.launch  testing.launch
src/ex1_serial/msg/: Read.msg  Send.msg  Telemetry.msg
src/ex1_serial/src/: add_crc.cpp  cobs.cpp  detect_pkt.cpp  pkt_validation.cpp  serial_Tx_Rx.cpp  uncobs.cpp
src/ex1_startup/: CMakeLists.txt
src/ex1_startup/launch/: wake_up.launch
src/teleop/: CMakeLists.txt  package.xml
src/teleop/config/: btn_axs_map.xml  cmd_map.yaml  motion_control.xml
src/teleop/launch/: teleop.launch
src/teleop/msg/: Command.msg
src/teleop/src/: ex1_teleop.cpp
(+30 files in other folders)
