<?xml version="1.0"?>
<package format="2">
  <name>teleop</name>
  <version>1.0.0</version>
  <description>The teleop package to operate the HERO EXPLORER 1 rover.</description>
  <maintainer email="davidrm@dc.tohoku.ac.jp">David Rodriguez</maintainer>
  <author email="davidrm@dc.tohoku.ac.jp">David Rodriguez</author>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>joy</build_depend>
  <build_export_depend>joy</build_export_depend>
  <exec_depend>joy</exec_depend>
  <depend>std_msgs</depend>
</package>
